added swagger annotation for Transaction and Category API
